[package]
name = "pool"
version = "1.0.0"
authors = ["z0ji <zoji@maelstrom.finance>"]
edition = "2021"
homepage = "https://swim.io"
keywords = ["solana", "swim", "progrm", "pool"]
license = "BUSL-1.1"

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "roots"]

[dependencies]
#solana related dependencies
solana-program = "1.7.10"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

#serializiation/deserialzation
borsh = { version = "0.9.1", features = ["const-generics"] }
borsh-derive = "0.9.1"

#numerics
uint = { version = "0.9.1", default-features = false }
rust_decimal = {version = "1.15", features = [ "maths" ] }
rust_decimal_macros = "1.15"

#error handling
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

#misc
arrayvec = "0.7.1"


arbitrary = { version = "1.0.2", features = ["derive"], optional = true}
honggfuzz = {version = "0.5.54", optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"
cargo-deny = "0.11.3"

[lib]
crate-type = ["cdylib", "lib"]