[package]
name = "pool"
version = "0.1.0"
authors = ["z0ji <zoji@maelstrom.finance>"]
edition = "2018"

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "roots"]

[dependencies]
#solana related dependencies
solana-program = "1.8.14"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

#serializiation/deserialzation
borsh = { version = "0.9.1", features = ["const-generics"] }
borsh-derive = "0.9.1"

#numerics
# This must be pinned to 0.9.1 until Solana's Rust fork supports Rust >=1.56.1
uint = { version = "=0.9.1", default-features = false }
rust_decimal = {version = "1.22", features = [ "maths" ] }
rust_decimal_macros = "1.15"

#error handling
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

#misc
arrayvec = "0.7.1"


arbitrary = { version = "1.0.2", features = ["derive"], optional = true}
honggfuzz = {version = "0.5.54", optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-program-test = "=1.8.14"
solana-sdk = "=1.8.14"
solana-validator = "=1.8.14"
solana-client = "=1.8.14"
[lib]
crate-type = ["cdylib", "lib"]