[package]
name = "pool"
version = "1.0.0"
authors = ["swimivan <ivan@swim.io>"]
edition = "2018"
homepage = "https://swim.io"
keywords = ["solana", "swim", "program", "pool"]
license = "BUSL-1.1"

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "roots"]

[profile.release]
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
#solana related dependencies
solana-program = "1.8.14"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

#serializiation/deserialzation
borsh = { version = "0.9.1", features = ["const-generics"] }
borsh-derive = "0.9.1"

#numerics
# This must be pinned to 0.9.1 until Solana's Rust fork supports Rust >=1.56.1
uint = { version = "=0.9.1", default-features = false }
rust_decimal = {version = "1.26", features = [ "maths" ] }
rust_decimal_macros = "1.22"

#error handling
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

#misc
arrayvec = "0.7.2"


arbitrary = { version = "1.1.0", features = ["derive"], optional = true}
honggfuzz = {version = "0.5.54", optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-program-test = "=1.8.14"
solana-sdk = "=1.8.14"
solana-validator = "=1.8.14"
solana-client = "=1.8.14"
[lib]
crate-type = ["cdylib", "lib"]
